--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <div id="price" class="facet"></div>
         <div id="type" class="facet"></div>
         <div class="resources">
-          Check out the code on 
+          Check out the code on
           <a href="https://github.com/algolia/demo-infinite-scroll">GitHub</a> and the
           <a href="https://www.algolia.com/doc/guides/search/infinite-scroll">full guide</a>.
         </div>
@@ -35,6 +35,16 @@
         <div id="hits"></div>
       </div>
     </main>
+
+
+    <footer class="footer">
+      <ul>
+        <li class="footer-element"><a href="http://www.xcite.com/conditions-of-use">Terms and conditions</a></li>
+        <li class="footer-element"><a href="http://www.xcite.com/privacy">Privacy policy</a></li>
+        <li class="footer-element"><a href="http://www.xcite.com/about">About us</a></li>
+        <li class="footer-element"><a href="http://www.xcite.com/site-map">Site map</a></li>
+      </ul>
+    </footer>
 
     <script type="text/html" id="hits-template">
       <div class="hits">
